fixed itemtype alignment

--- a/style.css
+++ b/style.css
@@ -440,7 +440,7 @@ body {
     margin-left: 60px;
     display: flex;
     flex-flow: row;
-
+    row-gap: 65px;
     margin-bottom: 100px;
     flex-wrap: wrap;
 
@@ -460,11 +460,10 @@ body {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    grid-row-gap: 15px;
     max-width: 300px;
     height: 300px;
     padding-left: 15px;
-    margin-bottom: 60px;
     text-decoration: none;
     color: var(--text);
     font-size: 1.2em;
@@ -505,7 +504,6 @@ body {
 
 .itemname {
     grid-area: 2 / 1 / 3 / 2;
-    margin-top: 15px;
     margin-left: 2.5px;
     height: 100px;
     width: 150px;
@@ -515,7 +513,6 @@ body {
 .itemtype {
     grid-area: 2 / 2 / 3 / 3;
     background-color: var(--primary);
-    margin-top: 15px;
     height: 20px;
     text-align: center;
     min-width: 100px;
